d3绘制圆形图标边框((圆形动画

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doubn-todo",
+  "name": "douban-todo",
   "version": "1.0.0",
   "description": "Doubn-Todo: An Ionic project",
   "dependencies": {
