--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
-    "d3": "3.4.13"
+    "d3": "3.4.13",
+    "angular-messages": "~1.3.1"
   },
   "dependencies": {
     "jQuery": "~2.1.1"
